@@ -9,5 +9,6 @@ copyright_year   = 2011
 [@LEONT]
 install_tool = mbt
 -remove = PodCoverageTests
+ModuleBuildTiny.static = auto
 [Prereqs::MatchInstalled]
 module = Module::Build::Tiny
